# EuroHPC_Student_Challenge_2025_Team_2

./: .gitignore  CMakeLists.txt  README.md  error_mpi.txt  log.txt  output_mpi.txt  run_all_instances_job.slurm  run_instance_job.slurm  slurm_main_job.slurm
results/: anna_output.txt  david_output.txt  fpsol2.i.1_output.txt  fpsol2.i.2_output.txt  fpsol2.i.3_output.txt  games120._output.txt  homer._output.txt  huck._output.txt  inithx.i.1._output.txt  inithx.i.2._output.txt  inithx.i.3._output.txt  inithxi1_output.txt  jean._output.txt  jean_output.txt  le450_15a_output.txt  le450_15b_output.txt  le450_15c_output.txt  le450_15d_output.txt  le450_25a_output.txt  le450_25b_output.txt  le450_25c_output.txt  le450_25d_output.txt  le450_5a_output.txt  le450_5b_output.txt  le450_5c_output.txt  miles1000._output.txt  miles1500._output.txt  miles250._output.txt  miles500._output.txt  miles750._output.txt  mulsol.i.1._output.txt  mulsol.i.3._output.txt  mulsol.i.4._output.txt  mulsol.i.5._output.txt  myciel3._output.txt  myciel4._output.txt  myciel5._output.txt  myciel6._output.txt  myciel7._output.txt  queen10_10._output.txt  (+13 more)
src/: CMakeLists.txt  common.cpp  common.hpp  minimum_chromatic_finder.cpp  minimum_chromatic_finder.hpp
src/base/: csr_graph.cpp  csr_graph.hpp  dimacs.cpp  dimacs.hpp  dimacs_graph.cpp  dimacs_graph.hpp  graph.cpp  graph.hpp  graph_clique.cpp  graph_clique.hpp  graph_loader.cpp  graph_loader.hpp
src/branch_n_bound/: .branch_n_bound_par.cpp.swp  .branch_n_bound_seq.cpp.swp  balanced_branch_n_bound_par.cpp  balanced_branch_n_bound_par.hpp  branch_n_bound_par.cpp  branch_n_bound_par.hpp  branch_n_bound_seq.cpp  branch_n_bound_seq.hpp
src/branching/: bfs_lowest_gap.cpp  bfs_lowest_gap.hpp  branching_strategy.cpp  branching_strategy.hpp  constraints.cpp  constraints.hpp
src/clique/: clique_strategy.cpp  clique_strategy.hpp  fastwclq.cpp  fastwclq.hpp
src/color/: advanced_color.cpp  advanced_color.hpp  color.cpp  color.hpp  dsatur_color.cpp  dsatur_color.hpp  recolor.cpp  recolor.hpp
src/scripts/: .run_instance.cpp.swp  CMakeLists.txt  expected_chi.txt  run_all_instances.cpp  run_instance  run_instance.cpp  script.py  test_balanced.cpp  test_graph.cpp
src/scripts/logs/: log_0.txt  log_1.txt  log_2.txt  log_3.txt
tests/balanced_branch_n_bound_par/: CMakeLists.txt  test_b_b_n_b_par  test_b_n_b_par  test_par.cpp
tests/branch_n_bound/: 10_vertices_graph.col  log.txt  test_b_n_b_seq  test_seq.cpp
tests/branch_n_bound_par/: CMakeLists.txt  test_b_n_b_par  test_par.cpp
tests/branch_n_bound_seq/: CMakeLists.txt  test_b_n_b_seq  test_seq.cpp
tests/branching_strategy/: CMakeLists.txt  test  test.cpp
tests/clique_strategy/: CMakeLists.txt  test.cpp  test_clique
tests/color/: CMakeLists.txt  test.cpp  test_color
tests/common/: CMakeLists.txt  test_common.cpp  test_common.hpp
tests/constraints/: CMakeLists.txt  test.cpp
tests/csr_graph/: CMakeLists.txt  test.cpp  test_csr
tests/dimacs_graph/: CMakeLists.txt  test.cpp  test_dimacs
tests/dsatur_color/: CMakeLists.txt  test.cpp  test_dsatur
tests/file_tester/: CMakeLists.txt  file_tester.cpp  file_tester.hpp  test_file_tester
tests/graph_history/: CMakeLists.txt  test.cpp  test_history
tests/recolor/: CMakeLists.txt  test.cpp  test_recolor
